[gd_scene load_steps=2 format=3 uid="uid://controlpanelui001"]

[ext_resource type="Script" path="res://scripts/ui/control_panel_ui.gd" id="1_script"]

[node name="ControlPanelUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "CONTROL PANEL"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Arrange the glyphs in the correct sequence."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="SlotsLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Glyph Slots:"
horizontal_alignment = 1

[node name="SlotsContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="GlyphsLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Available Glyphs (click to place):"
horizontal_alignment = 1

[node name="GlyphsContainer" type="GridContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
columns = 4

[node name="Feedback" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="ButtonsContainer" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="SubmitButton" type="Button" parent="Panel/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Submit"

[node name="CloseButton" type="Button" parent="Panel/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "Close"
